--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.4/simple-lightbox.css" />
+    <link rel="stylesheet" href="../node_modules/simplelightbox/dist/simple-lightbox.min.css" />
         <link rel="stylesheet" href="./css/1-gallery.css" />
        </head>
    <a href="./index.html">HOME</a>
     <body>
       <ul class="gallery"></ul>
-      <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+      <script src="../node_modules/simplelightbox/dist/simple-lightbox.min.js"></script>
     <script type="module" src="./js/1-gallery.js"></script>
 </body>
 </html>
